--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -6,7 +6,7 @@
     <h1>Django123</h1>
     <p class="lead">Django is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
     <p><a href="https://www.djangoproject.com/" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-    <img src="/media/{{test.picture}}"> {{test.nom}}{{test.prenom}}
+    <img src="/media/{{test.picture}}"> {{test.nom}}{{test.prenom}}{{test.image.url}}
 </div>
 
 <div class="row">
